--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>creative-cards</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <text-input></text-input>
+      <text-input></text-input>
+      <text-input></text-input>
+    </div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
