Registering local components

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <div id="app">
-      <text-input></text-input>
-      <text-input></text-input>
-      <text-input></text-input>
+      <component-1></component-1>
+      <component-2></component-2>
     </div>
     <script src="/dist/build.js"></script>
   </body>
